# lidar_pose_estimation

./: .gitignore  README.md  setup.md
docs/: API.md
model/: README.md
model/exports/: metadata.json  pose_model.onnx  scaler_Y.joblib
model/outputs/: metrics.json  pose_model.pt  scaler_X.joblib
ros2_ws/src/lidar_pose_estimation/: package.xml  setup.cfg  setup.py
ros2_ws/src/lidar_pose_estimation/config/: pose_estimation.rviz
ros2_ws/src/lidar_pose_estimation/launch/: full_pipeline.launch.py
ros2_ws/src/lidar_pose_estimation/lidar_pose_estimation/: angle_filter_tester.py  conveyor_control.py  filter_node.py  geometry_utils.py  inference_onnx.py  pose_estimator_node.py  visualization.py
