<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_pose_estimation</name>
  <version>1.0.0</version>
  <description>6DOF pose estimation using vertical LiDAR scanner and deep learning on NVIDIA Jetson</description>
  <maintainer email="iscf@utc.fr">UTC ISCF Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
